pubData/error.txt
In file included from /home/latte/sketchbook/libraries/ros_lib/ros/node_handle.h:43:0,
                 from /home/latte/sketchbook/libraries/ros_lib/ros.h:38,
                 from pubData.ino:3:
/home/latte/sketchbook/libraries/ros_lib/rosserial_msgs/RequestParam.h: In constructor ‘rosserial_msgs::RequestParamResponse::RequestParamResponse()’:
/home/latte/sketchbook/libraries/ros_lib/rosserial_msgs/RequestParam.h:72:39: error: ‘nullptr’ was not declared in this scope
       ints_length(0), st_ints(), ints(nullptr),
                                       ^
In file included from /home/latte/sketchbook/libraries/ros_lib/ros.h:38:0,
                 from pubData.ino:3:
/home/latte/sketchbook/libraries/ros_lib/ros/node_handle.h: At global scope:
/home/latte/sketchbook/libraries/ros_lib/ros/node_handle.h:121:45: error: ‘nullptr’ was not declared in this scope
   Publisher * publishers[MAX_PUBLISHERS] = {nullptr};
                                             ^
/home/latte/sketchbook/libraries/ros_lib/ros/node_handle.h:122:47: error: ‘nullptr’ was not declared in this scope
   Subscriber_ * subscribers[MAX_SUBSCRIBERS] {nullptr};
                                               ^
pubData.ino: In function ‘void loop()’:
pubData.ino:61:5: error: ‘Quaternion’ is not a member of ‘tf’
pubData.ino:61:5: note: suggested alternative:
In file included from /home/latte/sketchbook/libraries/ros_lib/sensor_msgs/Imu.h:9:0,
                 from pubData.ino:5:
/home/latte/sketchbook/libraries/ros_lib/geometry_msgs/Quaternion.h:12:9: note:   ‘geometry_msgs::Quaternion’
   class Quaternion : public ros::Msg
         ^
pubData.ino:63:29: error: ‘q’ was not declared in this scope
pubData.ino:70:20: error: ‘sensor_msgs::Imu::_header_type {aka class std_msgs::Header}’ has no member named ‘imu_msg’
